added middle and right divs

--- a/cloud.html
+++ b/cloud.html
@@ -22,20 +22,25 @@
 				<h4>MY AWESOME SLOGAN</h4>
 			</div>
 			<div class="left-bottom-area">
+				<img src="static/res/img/logo.png">
+				<h2>445</h2>
+				<h4>HASHTAGS LAST 24H</h4>
+			</div>
+		</div>
+		<div class="right-area">
+			<div class="right-bottom-area">
+				<canvas>
+					
+				</canvas>
+				<div>
 					<img src="static/res/img/logo.png">
-					<h2>445</h2>
-					<h4>HASHTAGS LAST 24H</h4>
+				</div>
 			</div>
 		</div>
 		<div class="mid-area">
 			<canvas>
-				
-			</canvas>
-		</div>
-		<div class="right-area">
-			<div class="right-bottom-area">
 
-			</div>
+			</canvas>
 		</div>
 	</body>
 </html>
