added items to sidebar

--- a/cloud.html
+++ b/cloud.html
@@ -15,7 +15,9 @@
 	<body>
 		<div class="left-area">
 			<div class="navigation">
-
+				<img src="static/res/img/logo.png">
+				<img src="static/res/img/logo.png">
+				<img src="static/res/img/logo.png">
 			</div>
 			<div class="left-top-area">
 				<h2>#KARLSRUHE</h2>
