added icons for buttons and implemented bottom-line buttons

--- a/cloud.html
+++ b/cloud.html
@@ -15,16 +15,17 @@
 	<body>
 		<div class="left-area">
 			<div class="navigation">
-				<img src="static/res/img/logo.png">
-				<img src="static/res/img/logo.png">
-				<img src="static/res/img/logo.png">
+				<img src="static/res/img/home.png">
+				<img src="static/res/img/twitter.png">
+				<img src="static/res/img/statistics.png">
+				<img src="static/res/img/edit.png">
 			</div>
 			<div class="left-top-area">
 				<h2>#KARLSRUHE</h2>
 				<h4>MY AWESOME SLOGAN</h4>
 			</div>
 			<div class="left-bottom-area">
-				<img src="static/res/img/logo.png">
+				<img id="download-button" />
 				<h2>445</h2>
 				<h4>HASHTAGS LAST 24H</h4>
 			</div>
@@ -35,7 +36,7 @@
 					
 				</canvas>
 				<div>
-					<img src="static/res/img/logo.png">
+					<img id="pause-button" />
 				</div>
 			</div>
 		</div>
