--- a/cloud.html
+++ b/cloud.html
@@ -11,7 +11,9 @@
 		<link rel="stylesheet" href="static/css/normalize.css" type="text/css">
 		<link rel="stylesheet" href="static/css/main.css" type="text/css">
 		<link rel="stylesheet" href="static/css/cloud.css" type="text/css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script type="text/javascript" src="static/js/Eventhandler.js"></script>
+		<script type="text/javascript" src="static/js/Countdown.js"></script>
 	</head>
 	<body>
 		<div class="left-area">
@@ -33,7 +35,7 @@
 		</div>
 		<div class="right-area">
 			<div class="right-bottom-area">
-				<canvas id="canvas-timer">
+				<canvas id="canvas-timer" height="250px" width="250px">
 					
 				</canvas>
 				<div>
@@ -42,7 +44,7 @@
 			</div>
 		</div>
 		<div class="mid-area">
-			<canvas id="canvas-cloud">
+			<canvas id="canvas-cloud" height="450px" width="800px">
 
 			</canvas>
 		</div>
