--- a/index.html
+++ b/index.html
@@ -2,12 +2,15 @@
 <html>
 
 <head>
+
   <meta charset="utf-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <meta name="author" content="The Tagcloud Group">
   <meta name="description" content="Das Tagcloudprojekt in Webengineering und Projektmanagement">
+
   <title>Welcome at Tagcloud</title>
+
   <link rel="shortcut icon" href="static/res/img/logo.png">
   <link rel="stylesheet" href="static/css/normalize.css" type="text/css">
   <link rel="stylesheet" href="static/css/main.css" type="text/css">
@@ -16,6 +19,10 @@
   <link rel="stylesheet" href="static/css/index-header.css" type="text/css">
   <link rel="stylesheet" href="static/css/index-content.css" type="text/css">
   <link rel="stylesheet" href="static/css/index-about.css" type="text/css">
+
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
+  <script type="text/javascript" src="static/js/scrollShadow.js"></script>
+
 
 </head>
 
@@ -38,7 +45,7 @@
   <div class="contentdiv">
 
 
-    <div class="contenchild">
+    <div class="contenchild notready">
       <div class="circleBase">
         <object width="60%" height="60%" data="static/res/svg/statistics.svg">
         </object>
@@ -53,10 +60,10 @@
         <object width="60%" height="60%" style="cursor: pointer;" onclick="window.location='http://google.com';" data="static/res/svg/twitter.svg">
         </object>
       </div>
-      <p>#Karlsruhe</p>
+      <p class="buttonText">#Karlsruhe</p>
     </div>
 
-    <div class="contenchild">
+    <div class="contenchild notready">
       <div class="circleBase">
         <object width="60%" height="60%" data="static/res/svg/change.svg">
         </object>
