--- a/cloud.html
+++ b/cloud.html
@@ -11,6 +11,7 @@
 		<link rel="stylesheet" href="static/css/normalize.css" type="text/css">
 		<link rel="stylesheet" href="static/css/main.css" type="text/css">
 		<link rel="stylesheet" href="static/css/cloud.css" type="text/css">
+		<script type="text/javascript">paused=false</script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
 		<script type="text/javascript" src="static/js/Eventhandler.js"></script>
 		<script type="text/javascript" src="static/js/Countdown.js"></script>
@@ -39,7 +40,7 @@
 					
 				</canvas>
 				<div>
-					<img id="pause-button" />
+					<a id="pause-link"><img id="pause-button" /></a>
 				</div>
 			</div>
 		</div>
