--- a/cloud.html
+++ b/cloud.html
@@ -26,7 +26,7 @@
 			</div>
 			<div class="left-top-area">
 				<h2>#KARLSRUHE</h2>
-				<h4>MY AWESOME SLOGAN</h4>
+				<h4>IST DOCH EH KLAR</h4>
 			</div>
 			<div class="left-bottom-area">
 				<a id="download-link"><img id="download-button" /></a>
