website ready for use. tagcloud itself missing

--- a/cloud.html
+++ b/cloud.html
@@ -19,10 +19,10 @@
 	<body>
 		<div class="left-area">
 			<div class="navigation">
-				<img src="static/res/img/home.png">
-				<img src="static/res/img/twitter.png">
-				<img src="static/res/img/statistics.png">
-				<img src="static/res/img/edit.png">
+				<img id="home-link" src="static/res/img/home.png">
+				<img class ="deactivated" src="static/res/img/twitter.png">
+				<img class ="deactivated" src="static/res/img/statistics.png">
+				<img class ="deactivated" src="static/res/img/edit.png">
 			</div>
 			<div class="left-top-area">
 				<h2>#KARLSRUHE</h2>
