added photos for about page

--- a/index.html
+++ b/index.html
@@ -83,43 +83,53 @@
       <div class="team">
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/paris.png" alt="" />
           <p>Cem</p>
         </div>
         <!-- make it js -->
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/henne.png" alt="" />
           <p>Henne</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/britney.png" alt="" />
           <p>Domi</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/kayne.png" alt="" />
           <p>Leon</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/marc.png" alt="" />
           <p>Marc</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/chris.png" alt="" />
           <p>Chris</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
+          <img src="static/res/img/developers/pete.png" alt="" />
           <p>Pete</p>
         </div>
 
         <div class="team-member">
-          <img src="static/res/img/logo.png" alt="" />
-          <p>Pete</p>
+          <img src="static/res/img/developers/mario.png" alt="" />
+          <p>Mario</p>
+        </div>
+
+        <div class="team-member">
+          <img src="static/res/img/developers/jürgen.png" alt="" />
+          <p>Jürgen</p>
+        </div>
+
+        <div class="team-member">
+          <img src="static/res/img/developers/mike.png" alt="" />
+          <p>Mike</p>
         </div>
 
       </div>
