--- a/cloud.html
+++ b/cloud.html
@@ -45,7 +45,7 @@
 			</div>
 		</div>
 		<div class="mid-area">
-			<canvas id="canvas-cloud" height="450px" width="800px">
+			<canvas id="canvas-cloud">
 
 			</canvas>
 		</div>
