optimized diffenrent things

--- a/cloud.html
+++ b/cloud.html
@@ -6,6 +6,7 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="author" content="The Tagcloud Group">
 		<meta name="description" content="Das Tagcloudprojekt in Webengineering und Projektmanagement">
+		<meta name="robots" content="noindex" />
 		<title>Awesome Tagcloud</title>
 		<link rel="shortcut icon" href="static/res/img/logo.png">
 		<link rel="stylesheet" href="static/css/normalize.css" type="text/css">
