--- a/cloud.html
+++ b/cloud.html
@@ -8,6 +8,9 @@
 		<meta name="author" content="The Tagcloud Group">
 		<meta name="description" content="Das Tagcloudprojekt in Webengineering und Projektmanagement">
 		<meta name="robots" content="noindex" />
+		<noscript>
+      <meta http-equiv="refresh" content="0;url=nonJS.html">
+    </noscript>
 		<title>Awesome Tagcloud</title>
 		<link rel="shortcut icon" href="static/res/img/logo.png">
 		<link rel="stylesheet" href="static/css/normalize.css" type="text/css">
@@ -33,9 +36,9 @@
 				<h4>IST DOCH EH KLAR</h4>
 			</div>
 			<div class="left-bottom-area">
-				<a id="download-link"><img id="download-button" /></a>
-				<h2>445</h2>
-				<h4>HASHTAGS LAST 24H</h4>
+				<a id="download-link" class="deactivated"><img id="download-button" /></a>
+				<h2>TOP</h2>
+				<h4>100 HASHTAGS</h4>
 			</div>
 		</div>
 		<div class="right-area">
@@ -49,15 +52,9 @@
 			</div>
 		</div>
 		<div class="mid-area">
-
 		<div id="canvas">
 
 		</div>
-		<div class="controls">
-		<a id="zoom-in">Zoom in &middot;</a>
-		<a id="zoom-out">Zoom out &middot;</a>
-		<a id="reset">Reset</a>
-	</div>
 			<div class="elementsContainer">
 				<ul id="cloudElements">
 
