--- a/nonJS.html
+++ b/nonJS.html
@@ -16,7 +16,7 @@
 
   <div id="contentdiv">
     <div id="left_div">
-      <iframe width="560" height="315" src="https://www.youtube.com/embed/WTsDqIcpHUc?rel=0&amp;controls=0&amp;showinfo=0&amp;autoplay=1" frameborder="0" allowfullscreen></iframe>
+      <img src="static/res/img/ohno.jpg">
     </div>
     <div id="right_div">
       <p>
@@ -25,13 +25,11 @@
     </div>
   </div>
 
-
   <footer class="footer">
     <img src="static/res/svg/logo.svg"/>
     <p>by TagCloud</p>
     <p id="home"><a href="index.html">Zur Startseite</a>
   </footer>
-
 
 </body>
 
